[package]
name = "skicomapi"
version = "0.1.0"
authors = ["luis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.3.11"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.13.0"
r2d2 = "0.8.3"
r2d2-mongodb = "*"


[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]
